# OpenCS

./: package-lock.json  test.py
backend/: .gitignore  main.py  pyproject.toml  test.py
backend/docs/: db.md
backend/src/app/controllers/: __init__.py  agent_controller.py  auth_controller.py  base.py  business_controller.py  business_knowladge_controller.py  conversation_controller.py  document_knowladge_controller.py  user_controller.py  whatsapp_controller.py
backend/src/app/middlewares/: error_handler.py  rbac.py
backend/src/app/routes/: agent_route.py  auth_route.py  business_knowladge_route.py  business_route.py  conversation_route.py  document_knowladge_route.py  user_route.py  whatsapp_route.py
backend/src/app/validators/: agent_schema.py  analytic_schema.py  auth_schema.py  business_knowladge_schema.py  business_schema.py  customer_schema.py  document_knowladge_schema.py  human_fallback_schema.py  insight_schema.py  message_schema.py  whatsapp_schema.py
backend/src/config/: __init__.py  setting.py  supabase.py
backend/src/core/context/: request_context.py
backend/src/core/exceptions/: __init__.py  agent_exception.py  auth_exception.py  base.py  business_exception.py  business_knowladge_exception.py  database_exception.py  document_store_exception.py  internal_exception.py  jwt_exception.py  upload_file_exception.py  whatsapp_exceptions.py
backend/src/core/utils/: __init__.py  factory.py  hash.py  logger.py  response.py  save_file.py  security.py
backend/src/domain/models/: __init__.py  agent_analytics.py  agent_configurations.py  agents.py  (+11 more)
(+297 files in other folders)
