[project]
name = "project-wa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "supabase>=2.25.1",
    "uvicorn>=0.38.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.1.3",
    "tiktoken>=0.12.0",
    "langchain-openai>=1.1.6",
    "langchain-google-genai>=4.1.2",
    "langchain-anthropic>=1.3.0",
    "langgraph>=1.0.5",
    "mem0ai>=1.0.1",
    "chromadb>=1.4.0",
    "langchain-core>=1.2.5",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.0",
    "langchain>=1.2.0",
    "python-multipart>=0.0.21",
    "pypdf>=6.5.0",
]
